added temasek work exp

--- a/_includes/milestone.html
+++ b/_includes/milestone.html
@@ -75,7 +75,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>May 2019</h4>
-                                    <h4 class="subheading">Insights & analytics internship</h4>
+                                    <h4 class="subheading">Insights & Analytics Intern</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Worked on streamlining real estate analytics for in-house reporting and modelling. Used Python, Tableau, and VBA for ETL, automation and integration.</p>
@@ -83,7 +83,7 @@
                             </div>
                         </li>
                         <li class="timeline-inverted">
-                            <div class="timeline-image">
+                            <!-- <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
@@ -95,9 +95,7 @@
                                     <p class="text-muted">Courses: Machine Learning, Data Science, Managing Big Data, Algorithms Data structures and Complexity, Simulation, Introduction to Psychology.</p>
                                     <p class="text-muted">Self-studied CFA Level I in Netherlands and passed with a score band above 90 percentiles.</p>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="timeline-image">
+                            </div> -->
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/7.jpg" alt="">
                             </div>
@@ -108,6 +106,20 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Worked with Citi Bank to design and build an integrated system that automatically extracts and presents credit signals in a consolidated and timely manner along with data visualisations to facilitate credit risk reassessment of borrowers.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-image">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/logo_Temasek.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Mar 2021</h4>
+                                    <h4 class="subheading">Full Stack Engineer</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Under Temasek's Digital Tech team with primary focus on big data solutions, work with technical product managers, in-house and external developers to deliver data products in agile delivery.</p>
                                 </div>
                             </div>
                         </li>
