updated skills, added devops

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -16,12 +16,12 @@
                     <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/programming.png" alt="">
                 </span>
                 <h4 class="service-heading">Data analytics</h4>
-                <p class="font-weight-bold">Object-Oriented Programming: </p>
-                <p class="font-weight-normal">Python(numpy, pandas), R, C#<br></p>
-                <p class="font-weight-bold">Databases: </p>
-                <p class="font-weight-normal">SQL(MySQL, SQLite, Presto), NoSQL(MongoDB, Neo4j)<br></p>
-                <p class="font-weight-bold">Data visualization: </p>
-                <p class="font-weight-normal">PowerBI(DAX, server), Tableau, d3.js, Excel<br></p>
+                <b>Object-Oriented Programming: </b>
+                <p class="font-weight-normal">Python(numpy, pandas), R, GoLang<br></p>
+                <b">Databases: </b>
+                <p class="font-weight-normal">SQL(MySQL, Postgres, Snowflake), NoSQL(MongoDB, Neo4j)<br></p>
+                <b>Data visualization: </b>
+                <p class="font-weight-normal">PowerBI, Tableau, Qlik Sense<br></p>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <span class="fa-stack fa-4x">
@@ -30,12 +30,10 @@
                     <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/backend.png" alt="">
                 </span>
                 <h4 class="service-heading">Backend dev</h4>
-                <p class="font-weight-bold">Distributed File System: </p>
-                <p class="font-weight-normal">Apache Spark(PySpark), Hadoop, MapReduce, GFS, Unix Shell commands, AWS EMR<br></p>
-                <p class="font-weight-bold">Data extraction: </p>
-                <p class="font-weight-normal">REST API (Flask, Postman), Web-scraping, ETL<br></p>
-                <p class="font-weight-bold">Testing: </p>
-                <p class="font-weight-normal">Flask Testing<br></p>
+                <b>Big Data Services: </b>
+                <p class="font-weight-normal">Apache Spark(PySpark), Snowflake, Hadoop, MapReduce, AWS EMR<br></p>
+                <b>Data Engineering: </b>
+                <p class="font-weight-normal">Airflow, AWS Glue, Web-scraping, RESTful API<br></p>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <span class="fa-stack fa-4x">
@@ -44,12 +42,7 @@
                     <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/frontend.png" alt="">
                 </span>
                 <h4 class="service-heading">Frontend dev</h4>
-                <p class="font-weight-bold">Programming: </p>
-                <p class="font-weight-normal">React.js, d3.js, R shiny, HTML, selenium<br></p>
-                <p class="font-weight-bold">PM Tools: </p>
-                <p class="font-weight-normal">Github, GitKraken, Trello<br></p>
-                <p class="font-weight-bold">Project Management: </p>
-                <p class="font-weight-normal">Agile principles, Scrum<br></p>
+                <p class="font-weight-normal">TypeScript, React.js, eslint, HTML, css, npm<br></p>
             </div>
         </div>
         <div class="row">
@@ -60,16 +53,27 @@
                     <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/ML.svg" alt="">
                 </span>
                 <h4 class="service-heading">ML & AI</h4>
-                <p class="font-weight-bold">Modelling: </p>
+                <b>Modelling: </b>
                 <p class="font-weight-normal">Statistical, Time series models<br></p>
-                <p class="font-weight-bold">ML: </p>
+                <b>ML: </b>
                 <p class="font-weight-normal">classification, clustering, regression, decision trees<br>Sciki-learn, MLlib, statsmodels<br></p>
-                <p class="font-weight-bold">DL: </p>
+                <b>DL: </b>
                 <p class="font-weight-normal">Pytorch, Tensorflow, Keras, Computer vision (GAN, VAE)<br></p>
-                <p class="font-weight-bold">NLP: </p>
+                <b>NLP: </b>
                 <p class="font-weight-normal">OCR, NER, language detection, sentiment analysis, word-embedding<br>Spacy, NLTK, BERT, RNN(LSTM)<br></p>
-                <p class="font-weight-bold">RL: </p>
+                <b>RL: </b>
                 <p class="font-weight-normal">policy-evaluation, epsilon greedu, UCB<br></p>
+            </div>
+            <div class="col-md-4 col-sm-6 portfolio-item">
+                <span class="fa-stack fa-4x">
+                    <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/logo-devops.png" alt="">
+                </span>
+                <h4 class="service-heading">DevOps</h4>
+                <p class="font-weight-normal">
+                    Bitbucket, Git<br>
+                    CI/CD: Cloudbees Jenkins, kubernetes, AWS EKS, OCP <br>
+                    Dev/Prod/UAT version control and deployment<br>
+                </p>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <span class="fa-stack fa-4x">
