--- a/_includes/self.html
+++ b/_includes/self.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2 text-left">
-                        <p class="large text-muted"> I am a fresh graduate from Singapore University of Technology and Design and I am specialized in Business Analytics with a minor in AI. I have keen interests in risk management, data analytics and FinTech technologies. </p>
+                        <p class="large text-muted"> I am a graduate from Singapore University of Technology and Design specialized in Business Analytics with a minor in AI. I am passionate about delivering transforming data products to bring business values and team success. </p>
                     </div>
                 </div>
             </div>
