--- a/_includes/milestone.html
+++ b/_includes/milestone.html
@@ -111,7 +111,7 @@
                         </li>
                         <li class="timeline-image">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/logo_Temasek.png" alt="">
+                                <img class="img-circle img-responsive" src="img/about/temasek-white.svg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
