updated skill text

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -16,12 +16,12 @@
                     <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/programming.png" alt="">
                 </span>
                 <h4 class="service-heading">Data analytics</h4>
-                <b>Object-Oriented Programming: </b>
+                <b>Coding </b>
                 <p class="font-weight-normal">Python(numpy, pandas), R, GoLang<br></p>
-                <b">Databases: </b>
-                <p class="font-weight-normal">SQL(MySQL, Postgres, Snowflake), NoSQL(MongoDB, Neo4j)<br></p>
-                <b>Data visualization: </b>
-                <p class="font-weight-normal">PowerBI, Tableau, Qlik Sense<br></p>
+                <b">Database </b>
+                <p class="font-weight-normal">SQL(MySQL, Postgres, AWS RDS, Snowflake), NoSQL(MongoDB)<br></p>
+                <b>Data visualization </b>
+                <p class="font-weight-normal">PowerBI, Tableau, Qlik Sense Enterprise<br></p>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <span class="fa-stack fa-4x">
@@ -30,10 +30,10 @@
                     <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/backend.png" alt="">
                 </span>
                 <h4 class="service-heading">Backend dev</h4>
-                <b>Big Data Services: </b>
+                <b>Big Data Services </b>
                 <p class="font-weight-normal">Apache Spark(PySpark), Snowflake, Hadoop, MapReduce, AWS EMR<br></p>
-                <b>Data Engineering: </b>
-                <p class="font-weight-normal">Airflow, AWS Glue, Web-scraping, RESTful API<br></p>
+                <b>Data Engineering </b>
+                <p class="font-weight-normal">Airflow, AWS Glue, Web-scraping, RESTful API, Shell Scripting<br></p>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <span class="fa-stack fa-4x">
@@ -53,16 +53,14 @@
                     <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/ML.svg" alt="">
                 </span>
                 <h4 class="service-heading">ML & AI</h4>
-                <b>Modelling: </b>
+                <b>Modelling </b>
                 <p class="font-weight-normal">Statistical, Time series models<br></p>
-                <b>ML: </b>
+                <b>ML </b>
                 <p class="font-weight-normal">classification, clustering, regression, decision trees<br>Sciki-learn, MLlib, statsmodels<br></p>
-                <b>DL: </b>
+                <b>DL </b>
                 <p class="font-weight-normal">Pytorch, Tensorflow, Keras, Computer vision (GAN, VAE)<br></p>
-                <b>NLP: </b>
-                <p class="font-weight-normal">OCR, NER, language detection, sentiment analysis, word-embedding<br>Spacy, NLTK, BERT, RNN(LSTM)<br></p>
-                <b>RL: </b>
-                <p class="font-weight-normal">policy-evaluation, epsilon greedu, UCB<br></p>
+                <b>NLP </b>
+                <p class="font-weight-normal">OCR, NER, language detection, sentiment analysis, word-embedding<br>Spacy, NLTK, BERT<br></p>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <span class="fa-stack fa-4x">
@@ -70,8 +68,10 @@
                 </span>
                 <h4 class="service-heading">DevOps</h4>
                 <p class="font-weight-normal">
+                    <b>Version Control </b>
                     Bitbucket, Git<br>
-                    CI/CD: Cloudbees Jenkins, kubernetes, AWS EKS, OCP <br>
+                    <b>CI/CD </b>
+                    Cloudbees Jenkins, kubernetes, AWS EKS, OCP, Docker<br>
                     Dev/Prod/UAT version control and deployment<br>
                 </p>
             </div>
