--- a/_includes/milestone.html
+++ b/_includes/milestone.html
@@ -102,7 +102,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Feb 2020</h4>
-                                    <h4 class="subheading">Capstone FYP: Credit Risk Digitalization</h4>
+                                    <h4 class="subheading">Project Intern: Credit Risk Digitalization</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Worked with Citi Bank to design and build an integrated system that automatically extracts and presents credit signals in a consolidated and timely manner along with data visualisations to facilitate credit risk reassessment of borrowers.</p>
